apps/ryot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ryot
  labels:
    gateway-access: ryot
