apps/ryot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ryot
  namespace: ryot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ryot
  template:
    metadata:
      labels:
        app: ryot
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
        - name: ryot
          image: ignisda/ryot:v9
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: ryot-database-pvc
