apps/ryot/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ryot-database
  namespace: ryot
spec:
  selector:
    app: ryot
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
