apps/ryot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ryot
  namespace: ryot
spec:
  selector:
    app: ryot
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
