apps/ryot/route.yaml
# apps/ryot/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ryot-route
  namespace: ryot
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: ryot-https     # Attach to the HTTPS listener
  hostnames:
    - "ryot.hoareau-marion.eu"
  rules:
    - backendRefs:
        - name: ryot
          port: 8000
